PPIFront/DiscretePLParser.java
// Generated from DiscretePL.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DiscretePLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, BOP=22, UOP=23, C=24, EQ=25, GT=26, 
		LT=27, EBRANCH=28, INT=29, DOUBLE=30, FILENAME=31, ID=32, STRING=33, LETTER=34, 
		DIGIT=35, NL=36, LINE_COMMENT=37, WS=38;
	public static final int
		RULE_prog = 0, RULE_decl = 1, RULE_data = 2, RULE_stat = 3, RULE_r = 4, 
		RULE_ebranch = 5, RULE_expr = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "decl", "data", "stat", "r", "ebranch", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "','", "';'", "'int'", "'='", "'['", "']'", "'read'", 
			"'('", "')'", "'double'", "'{'", "'}'", "'if'", "'while'", "'for'", "'in'", 
			"'Bernoulli'", "'Discrete'", "'observe'", "'Infer'", null, "'!'", null, 
			"'=='", "'>'", "'<'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "BOP", "UOP", 
			"C", "EQ", "GT", "LT", "EBRANCH", "INT", "DOUBLE", "FILENAME", "ID", 
			"STRING", "LETTER", "DIGIT", "NL", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DiscretePL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DiscretePLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(15); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(14);
					decl();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(17); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__10))) != 0)) {
				{
				{
				setState(19);
				data();
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(25);
				stat(0);
				}
				}
				setState(28); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__19) | (1L << T__20) | (1L << ID) | (1L << NL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntVarContext extends DeclContext {
		public List<TerminalNode> ID() { return getTokens(DiscretePLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DiscretePLParser.ID, i);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public IntVarContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterIntVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitIntVar(this);
		}
	}
	public static class BoolVarContext extends DeclContext {
		public List<TerminalNode> ID() { return getTokens(DiscretePLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DiscretePLParser.ID, i);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public BoolVarContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterBoolVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitBoolVar(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			int _alt;
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new BoolVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				match(T__0);
				setState(31);
				match(ID);
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(32);
					match(T__1);
					setState(33);
					match(ID);
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				match(T__2);
				setState(41); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(40);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(43); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case T__3:
				_localctx = new IntVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(T__3);
				setState(46);
				match(ID);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(47);
					match(T__1);
					setState(48);
					match(ID);
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(54);
				match(T__2);
				setState(56); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(55);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(58); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
	 
		public DataContext() { }
		public void copyFrom(DataContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntReadContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public TerminalNode FILENAME() { return getToken(DiscretePLParser.FILENAME, 0); }
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public IntReadContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterIntRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitIntRead(this);
		}
	}
	public static class BoolArrayContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public List<TerminalNode> C() { return getTokens(DiscretePLParser.C); }
		public TerminalNode C(int i) {
			return getToken(DiscretePLParser.C, i);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public BoolArrayContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterBoolArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitBoolArray(this);
		}
	}
	public static class BoolReadContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public TerminalNode FILENAME() { return getToken(DiscretePLParser.FILENAME, 0); }
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public BoolReadContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterBoolRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitBoolRead(this);
		}
	}
	public static class IntArrayContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public List<TerminalNode> INT() { return getTokens(DiscretePLParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(DiscretePLParser.INT, i);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public IntArrayContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterIntArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitIntArray(this);
		}
	}
	public static class IntDataContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public TerminalNode INT() { return getToken(DiscretePLParser.INT, 0); }
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public IntDataContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterIntData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitIntData(this);
		}
	}
	public static class BoolDataContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public TerminalNode C() { return getToken(DiscretePLParser.C, 0); }
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public BoolDataContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterBoolData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitBoolData(this);
		}
	}
	public static class DoubleReadContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public TerminalNode FILENAME() { return getToken(DiscretePLParser.FILENAME, 0); }
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public DoubleReadContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterDoubleRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitDoubleRead(this);
		}
	}
	public static class DoubleArrayContext extends DataContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public List<TerminalNode> DOUBLE() { return getTokens(DiscretePLParser.DOUBLE); }
		public TerminalNode DOUBLE(int i) {
			return getToken(DiscretePLParser.DOUBLE, i);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public DoubleArrayContext(DataContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterDoubleArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitDoubleArray(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_data);
		int _la;
		try {
			int _alt;
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				_localctx = new IntDataContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(T__3);
				setState(63);
				match(ID);
				setState(64);
				match(T__4);
				setState(65);
				match(INT);
				setState(66);
				match(T__2);
				setState(68); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(70); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				_localctx = new BoolDataContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(T__0);
				setState(73);
				match(ID);
				setState(74);
				match(T__4);
				setState(75);
				match(C);
				setState(76);
				match(T__2);
				setState(78); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(77);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(80); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 3:
				_localctx = new BoolReadContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(T__0);
				setState(83);
				match(T__5);
				setState(84);
				match(T__6);
				setState(85);
				match(ID);
				setState(86);
				match(T__4);
				setState(87);
				match(T__7);
				setState(88);
				match(T__8);
				setState(89);
				match(FILENAME);
				setState(90);
				match(T__9);
				setState(91);
				match(T__2);
				setState(93); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(92);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(95); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 4:
				_localctx = new IntReadContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				match(T__3);
				setState(98);
				match(T__5);
				setState(99);
				match(T__6);
				setState(100);
				match(ID);
				setState(101);
				match(T__4);
				setState(102);
				match(T__7);
				setState(103);
				match(T__8);
				setState(104);
				match(FILENAME);
				setState(105);
				match(T__9);
				setState(106);
				match(T__2);
				setState(108); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(107);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(110); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 5:
				_localctx = new DoubleReadContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				match(T__10);
				setState(113);
				match(T__5);
				setState(114);
				match(T__6);
				setState(115);
				match(ID);
				setState(116);
				match(T__4);
				setState(117);
				match(T__7);
				setState(118);
				match(T__8);
				setState(119);
				match(FILENAME);
				setState(120);
				match(T__9);
				setState(121);
				match(T__2);
				setState(123); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(122);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(125); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 6:
				_localctx = new BoolArrayContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(127);
				match(T__0);
				setState(128);
				match(T__5);
				setState(129);
				match(T__6);
				setState(130);
				match(ID);
				setState(131);
				match(T__4);
				setState(132);
				match(T__11);
				setState(133);
				match(C);
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(134);
					match(T__1);
					setState(135);
					match(C);
					}
					}
					setState(138); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(140);
				match(T__12);
				setState(141);
				match(T__2);
				setState(143); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(142);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(145); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 7:
				_localctx = new IntArrayContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				match(T__3);
				setState(148);
				match(T__5);
				setState(149);
				match(T__6);
				setState(150);
				match(ID);
				setState(151);
				match(T__4);
				setState(152);
				match(T__11);
				setState(153);
				match(INT);
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(154);
					match(T__1);
					setState(155);
					match(INT);
					}
					}
					setState(158); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(160);
				match(T__12);
				setState(161);
				match(T__2);
				setState(163); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(162);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(165); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 8:
				_localctx = new DoubleArrayContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(167);
				match(T__10);
				setState(168);
				match(T__5);
				setState(169);
				match(T__6);
				setState(170);
				match(ID);
				setState(171);
				match(T__4);
				setState(172);
				match(T__11);
				setState(173);
				match(DOUBLE);
				setState(176); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(174);
					match(T__1);
					setState(175);
					match(DOUBLE);
					}
					}
					setState(178); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(180);
				match(T__12);
				setState(181);
				match(T__2);
				setState(183); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(182);
						match(NL);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(185); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoopContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(DiscretePLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(DiscretePLParser.NL, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public LoopContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitLoop(this);
		}
	}
	public static class DeterAssgContext extends StatContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeterAssgContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterDeterAssg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitDeterAssg(this);
		}
	}
	public static class DiscreteAssgContext extends StatContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public DiscreteAssgContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterDiscreteAssg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitDiscreteAssg(this);
		}
	}
	public static class InferExpectationContext extends StatContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public InferExpectationContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterInferExpectation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitInferExpectation(this);
		}
	}
	public static class SequentialContext extends StatContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public SequentialContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).enterSequential(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiscretePLListener ) ((DiscretePLListener)listener).exitSequential(this);
		}
	}
	public static class BernoulliAssgContext extends StatContext {
		public TerminalNode ID() { return getToken(DiscretePLParser.ID, 0); }
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public BernoulliAssgContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
